force-app/main/default/objects/Employee__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Employee Current Status</description>
    <inlineHelpText>Status</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>