force-app/main/default/objects/Employee__c/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <inlineHelpText>Date of birth</inlineHelpText>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>