force-app/main/default/objects/Employee__c/fields/Door_No__c.field-meta.xml
<CustomField>
    <fullName>Door_No__c</fullName>
    <inlineHelpText>Door Number</inlineHelpText>
    <label>House No/Door No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>