force-app/main/default/objects/Employee__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <description>Employee Id number</description>
    <displayFormat>{000000}</displayFormat>
    <inlineHelpText>This values should be unique across the system.</inlineHelpText>
    <label>Employee Id</label>
    <type>AutoNumber</type>
</CustomField>