force-app/main/default/objects/Employee__c/fields/Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>Joining_Date__c</fullName>
    <description>Date of joining employee</description>
    <inlineHelpText>DOJ</inlineHelpText>
    <label>Joining Date</label>
    <type>Date</type>
</CustomField>