force-app/main/default/objects/Employee__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <inlineHelpText>Mobile Number</inlineHelpText>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>