force-app/main/default/objects/Employee__c/fields/Personal_ID__c.field-meta.xml
<CustomField>
    <fullName>Personal_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Personal Email address</description>
    <inlineHelpText>Email Id</inlineHelpText>
    <label>Personal ID</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>