force-app/main/default/objects/Employee__c/fields/Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>Skill_Set__c</fullName>
    <label>Skill Set</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>C#.Net</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>Sample1</fullName>
            </value>
            <value>
                <fullName>Sample2</fullName>
            </value>
            <value>
                <fullName>Sample3</fullName>
            </value>
            <value>
                <fullName>Sample4</fullName>
            </value>
            <value>
                <fullName>Sample5</fullName>
            </value>
            <value>
                <fullName>Sample6</fullName>
            </value>
            <value>
                <fullName>Sample7</fullName>
            </value>
            <value>
                <fullName>Sample8</fullName>
            </value>
            <value>
                <fullName>Sample9</fullName>
            </value>
            <value>
                <fullName>Sample10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>