force-app/main/default/objects/Employee__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <description>Village Address</description>
    <inlineHelpText>Village/Street address</inlineHelpText>
    <label>Village/Street/Locality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>