force-app/main/default/objects/Employee__c/validationRules/Mobile_Number_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Range</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Mobile__c) &lt;10</errorConditionFormula>
    <errorMessage>Mobile number should be 10 digits</errorMessage>
</ValidationRule>